CODIGO/Tiger/Tiger/ANTLR/tigerParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g 2017-04-13 21:15:04

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019

using System;

using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace Tiger
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class tigerParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACCESS_LVALUE", "ALIAS_DECL_NODE", "AND", "ARRAY", "ARRAY_CREATION_NODE", "ARRAY_OF_DECL_NODE", "ASCII_CHAR", "ASCII_CODE", "ASSIGN", "BREAK", "COLON", "COMMA", "COMMENT", "DECLARATION_LIST_NODE", "DIFFERENT", "DIGIT", "DIV", "DO", "DOT", "ELSE", "END", "EQUAL", "EXPR_LIST_NODE", "EXPR_SEQ_LET_NODE", "EXPR_SEQ_NODE", "FIELD_DEF_NODE", "FIELD_DEF_SEQ_NODE", "FIELD_LIST_NODE", "FIELD_NODE", "FOR", "FOR_NODE", "FUNCTION", "FUNCTION_CALL_NODE", "FUNCTION_DECLARATION_BLOCK_NODE", "FUNCTION_DEC_NODE", "GREATER_EQUAL_THAN", "GREATER_THAN", "ID", "IF", "IF_THEN_ELSE_NODE", "IF_THEN_NODE", "IN", "INDEXER", "INT", "LEFT_BRACKETS", "LEFT_CURLY_BRACKETS", "LEFT_PARENTHESIS", "LESS_EQUAL_THAN", "LESS_THAN", "LET", "LETTER", "LET_NODE", "LVALUE_STEPS", "MINUS", "MULT", "NEGATIVE_NODE", "NIL", "OF", "OR", "PLUS", "PROCEDURE_DEC_NODE", "PROGRAM_NODE", "QUOTES", "RECORD_CREATION_NODE", "RECORD_DECL_NODE", "RIGHT_BRACKETS", "RIGHT_CURLY_BRACKETS", "RIGHT_PARENTHESIS", "SCAPE", "SEMICOLON", "STRING", "TEST", "THEN", "TO", "TYPE", "TYPE_DECLARATION_BLOCK_NODE", "VAR", "VARIABLE_DECLARATION_BLOCK_NODE", "VAR_DEC_NODE", "VAR_TYPE_ID_DEC_NODE", "WHILE", "WHILE_NODE", "WHITE_SPACES", "WS"
	};
	public const int EOF=-1;
	public const int ACCESS_LVALUE=4;
	public const int ALIAS_DECL_NODE=5;
	public const int AND=6;
	public const int ARRAY=7;
	public const int ARRAY_CREATION_NODE=8;
	public const int ARRAY_OF_DECL_NODE=9;
	public const int ASCII_CHAR=10;
	public const int ASCII_CODE=11;
	public const int ASSIGN=12;
	public const int BREAK=13;
	public const int COLON=14;
	public const int COMMA=15;
	public const int COMMENT=16;
	public const int DECLARATION_LIST_NODE=17;
	public const int DIFFERENT=18;
	public const int DIGIT=19;
	public const int DIV=20;
	public const int DO=21;
	public const int DOT=22;
	public const int ELSE=23;
	public const int END=24;
	public const int EQUAL=25;
	public const int EXPR_LIST_NODE=26;
	public const int EXPR_SEQ_LET_NODE=27;
	public const int EXPR_SEQ_NODE=28;
	public const int FIELD_DEF_NODE=29;
	public const int FIELD_DEF_SEQ_NODE=30;
	public const int FIELD_LIST_NODE=31;
	public const int FIELD_NODE=32;
	public const int FOR=33;
	public const int FOR_NODE=34;
	public const int FUNCTION=35;
	public const int FUNCTION_CALL_NODE=36;
	public const int FUNCTION_DECLARATION_BLOCK_NODE=37;
	public const int FUNCTION_DEC_NODE=38;
	public const int GREATER_EQUAL_THAN=39;
	public const int GREATER_THAN=40;
	public const int ID=41;
	public const int IF=42;
	public const int IF_THEN_ELSE_NODE=43;
	public const int IF_THEN_NODE=44;
	public const int IN=45;
	public const int INDEXER=46;
	public const int INT=47;
	public const int LEFT_BRACKETS=48;
	public const int LEFT_CURLY_BRACKETS=49;
	public const int LEFT_PARENTHESIS=50;
	public const int LESS_EQUAL_THAN=51;
	public const int LESS_THAN=52;
	public const int LET=53;
	public const int LETTER=54;
	public const int LET_NODE=55;
	public const int LVALUE_STEPS=56;
	public const int MINUS=57;
	public const int MULT=58;
	public const int NEGATIVE_NODE=59;
	public const int NIL=60;
	public const int OF=61;
	public const int OR=62;
	public const int PLUS=63;
	public const int PROCEDURE_DEC_NODE=64;
	public const int PROGRAM_NODE=65;
	public const int QUOTES=66;
	public const int RECORD_CREATION_NODE=67;
	public const int RECORD_DECL_NODE=68;
	public const int RIGHT_BRACKETS=69;
	public const int RIGHT_CURLY_BRACKETS=70;
	public const int RIGHT_PARENTHESIS=71;
	public const int SCAPE=72;
	public const int SEMICOLON=73;
	public const int STRING=74;
	public const int TEST=75;
	public const int THEN=76;
	public const int TO=77;
	public const int TYPE=78;
	public const int TYPE_DECLARATION_BLOCK_NODE=79;
	public const int VAR=80;
	public const int VARIABLE_DECLARATION_BLOCK_NODE=81;
	public const int VAR_DEC_NODE=82;
	public const int VAR_TYPE_ID_DEC_NODE=83;
	public const int WHILE=84;
	public const int WHILE_NODE=85;
	public const int WHITE_SPACES=86;
	public const int WS=87;

	public tigerParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public tigerParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return tigerParser.tokenNames; } }
	public override string GrammarFileName { get { return "D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:164:8: public program : prog= statement EOF -> ^( PROGRAM_NODE $prog) ;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<object, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EOF1 = default(IToken);
		AstParserRuleReturnScope<object, IToken> prog = default(AstParserRuleReturnScope<object, IToken>);

		object EOF1_tree = default(object);
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(164, 60);
		try
		{
			// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:164:16: (prog= statement EOF -> ^( PROGRAM_NODE $prog) )
			DebugEnterAlt(1);
			// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:164:18: prog= statement EOF
			{
			DebugLocation(164, 22);
			PushFollow(Follow._statement_in_program757);
			prog=statement();
			PopFollow();

			stream_statement.Add(prog.Tree);
			DebugLocation(164, 33);
			EOF1=(IToken)Match(input,EOF,Follow._EOF_in_program759);  
			stream_EOF.Add(EOF1);



			{
			// AST REWRITE
			// elements: prog
			// token labels: 
			// rule labels: retval, prog
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
			RewriteRuleSubtreeStream stream_prog=new RewriteRuleSubtreeStream(adaptor,"rule prog",prog!=null?prog.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 164:37: -> ^( PROGRAM_NODE $prog)
			{
				DebugLocation(164, 40);
				// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:164:40: ^( PROGRAM_NODE $prog)
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(164, 42);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(PROGRAM_NODE, "PROGRAM_NODE"), root_1);

				DebugLocation(164, 56);
				adaptor.AddChild(root_1, stream_prog.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(164, 60);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_comparision_op();
	partial void LeaveRule_comparision_op();

	// $ANTLR start "comparision_op"
	// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:167:1: comparision_op : ( LESS_THAN | LESS_EQUAL_THAN | GREATER_THAN | GREATER_EQUAL_THAN | DIFFERENT | EQUAL );
	[GrammarRule("comparision_op")]
	private AstParserRuleReturnScope<object, IToken> comparision_op()
	{
		EnterRule_comparision_op();
		EnterRule("comparision_op", 2);
		TraceIn("comparision_op", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken set2 = default(IToken);

		object set2_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "comparision_op");
		DebugLocation(167, 8);
		try
		{
			// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:168:2: ( LESS_THAN | LESS_EQUAL_THAN | GREATER_THAN | GREATER_EQUAL_THAN | DIFFERENT | EQUAL )
			DebugEnterAlt(1);
			// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(168, 2);

			set2=(IToken)input.LT(1);
			if (input.LA(1)==DIFFERENT||input.LA(1)==EQUAL||(input.LA(1)>=GREATER_EQUAL_THAN && input.LA(1)<=GREATER_THAN)||(input.LA(1)>=LESS_EQUAL_THAN && input.LA(1)<=LESS_THAN))
			{
				input.Consume();
				adaptor.AddChild(root_0, (object)adaptor.Create(set2));
				state.errorRecovery=false;
			}
			else
			{
				MismatchedSetException mse = new MismatchedSetException(null,input);
				DebugRecognitionException(mse);
				throw mse;
			}


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("comparision_op", 2);
			LeaveRule("comparision_op", 2);
			LeaveRule_comparision_op();
		}
		DebugLocation(173, 8);
		} finally { DebugExitRule(GrammarFileName, "comparision_op"); }
		return retval;

	}
	// $ANTLR end "comparision_op"

	partial void EnterRule_statement();
	partial void LeaveRule_statement();

	// $ANTLR start "statement"
	// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:176:1: statement : (left= disjunction -> $left) ( OR right= disjunction -> ^( OR $statement $right) )* ;
	[GrammarRule("statement")]
	private AstParserRuleReturnScope<object, IToken> statement()
	{
		EnterRule_statement();
		EnterRule("statement", 3);
		TraceIn("statement", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken OR3 = default(IToken);
		AstParserRuleReturnScope<object, IToken> left = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> right = default(AstParserRuleReturnScope<object, IToken>);

		object OR3_tree = default(object);
		RewriteRuleITokenStream stream_OR=new RewriteRuleITokenStream(adaptor,"token OR");
		RewriteRuleSubtreeStream stream_disjunction=new RewriteRuleSubtreeStream(adaptor,"rule disjunction");
		try { DebugEnterRule(GrammarFileName, "statement");
		DebugLocation(176, 77);
		try
		{
			// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:177:2: ( (left= disjunction -> $left) ( OR right= disjunction -> ^( OR $statement $right) )* )
			DebugEnterAlt(1);
			// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:177:4: (left= disjunction -> $left) ( OR right= disjunction -> ^( OR $statement $right) )*
			{
			DebugLocation(177, 4);
			// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:177:4: (left= disjunction -> $left)
			DebugEnterAlt(1);
			// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:177:5: left= disjunction
			{
			DebugLocation(177, 9);
			PushFollow(Follow._disjunction_in_statement817);
			left=disjunction();
			PopFollow();

			stream_disjunction.Add(left.Tree);


			{
			// AST REWRITE
			// elements: left
			// token labels: 
			// rule labels: retval, left
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
			RewriteRuleSubtreeStream stream_left=new RewriteRuleSubtreeStream(adaptor,"rule left",left!=null?left.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 177:21: -> $left
			{
				DebugLocation(177, 24);
				adaptor.AddChild(root_0, stream_left.NextTree());

			}

			retval.Tree = root_0;
			}

			}

			DebugLocation(177, 29);
			// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:177:29: ( OR right= disjunction -> ^( OR $statement $right) )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==OR))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:177:30: OR right= disjunction
					{
					DebugLocation(177, 30);
					OR3=(IToken)Match(input,OR,Follow._OR_in_statement823);  
					stream_OR.Add(OR3);

					DebugLocation(177, 38);
					PushFollow(Follow._disjunction_in_statement827);
					right=disjunction();
					PopFollow();

					stream_disjunction.Add(right.Tree);


					{
					// AST REWRITE
					// elements: right, statement, OR
					// token labels: 
					// rule labels: retval, right
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.Tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
					RewriteRuleSubtreeStream stream_right=new RewriteRuleSubtreeStream(adaptor,"rule right",right!=null?right.Tree:null);

					root_0 = (object)adaptor.Nil();
					// 177:50: -> ^( OR $statement $right)
					{
						DebugLocation(177, 53);
						// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:177:53: ^( OR $statement $right)
						{
						object root_1 = (object)adaptor.Nil();
						DebugLocation(177, 55);
						root_1 = (object)adaptor.BecomeRoot(stream_OR.NextNode(), root_1);

						DebugLocation(177, 59);
						adaptor.AddChild(root_1, stream_retval.NextTree());
						DebugLocation(177, 70);
						adaptor.AddChild(root_1, stream_right.NextTree());

						adaptor.AddChild(root_0, root_1);
						}

					}

					retval.Tree = root_0;
					}

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("statement", 3);
			LeaveRule("statement", 3);
			LeaveRule_statement();
		}
		DebugLocation(177, 77);
		} finally { DebugExitRule(GrammarFileName, "statement"); }
		return retval;

	}
	// $ANTLR end "statement"

	partial void EnterRule_disjunction();
	partial void LeaveRule_disjunction();

	// $ANTLR start "disjunction"
	// D:\\College\\4to\\2do Semestre\\Complementos de Compilación\\Proyecto\\CODIGO\\Tiger\\Tiger\\ANTLR\\tiger.g:179:1: disjunction : (left= comparision_expr -> $left) ( AND right= comparision_expr -> ^( AND $disjunction $right) )* ;
	[GrammarRule("disjunction")]
	private AstParserRuleReturnScope<object, IToken> disjunction()
	{
		EnterRule_disjunction();
		EnterRule("disjunction", 4);
		TraceIn("disjunction", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);
